# charuco_calibrator

./: .gitignore  BACKLOG.md  INSTALL_UBUNTU.md  README.md  SESSION.md  pyproject.toml  requirements-dev.txt  requirements.txt
charuco_calibrator/: __init__.py  ar_overlay.py  bokeh.py  calibration.py  config.py  detector.py  heatmap.py  image_source.py  main.py  scoring.py  ui.py  visualize.py  visualize_3d.py  web_server.py
charuco_calibrator/static/: app.js  index.html  style.css
charuco_calibrator_ros/: README.md  package.xml  setup.cfg  setup.py
charuco_calibrator_ros/charuco_calibrator_ros/: calibrator_node.py
charuco_calibrator_ros/config/: default_params.yaml
charuco_calibrator_ros/launch/: calibrator.launch.py
config/: default_config.yaml
docs/: CLAUDE_SPEC.md  FEATURES.md  index.html
tests/: conftest.py  test_ar_overlay.py  test_bokeh.py  test_calibration.py  test_config.py  test_detector.py  test_heatmap.py  test_image_source.py  test_scoring.py  test_visualize.py  test_visualize_3d.py
